--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -1,38 +1,36 @@
 [Unit]
 Description=plex media server
 Documentation=https://plex.tv https://github.com/albertrdixon/docker-plex
-Wants=docker.service network-online.target
-Requires=docker.service plex-data.service network-online.target
-After=docker.service plex-data.service network-online.target
+Requires=docker.socket
+After=docker.socket network-online.target
 
 [Service]
-TimeoutStartSec=20m
-Restart=always
-StandardOutput=journal
-StandardError=inherit
-SyslogIdentifier=%p
+Restart=on-failure
+RestartSec=2
+Environment=IMAGE_TAG=latest
 Environment=TRAEFIK_RULE=Host:%p
 EnvironmentFile=-/etc/sysconfig/%p/run
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p \
-    --volumes-from plex-data \
-    --volume /data:/data \
-    --volume /etc/timezone:/etc/timezone:ro \
-    --volume /etc/localtime:/etc/localtime:ro \
+ExecStartPre=-/usr/bin/docker pull quay.io/albertdixon/plex:${IMAGE_TAG}
+ExecStartPre=/bin/sh -c '/usr/bin/docker port %p-data || /usr/bin/docker create --name=%p-data --volume=/data busybox echo Data for Plex'
+ExecStart=/usr/bin/docker run --rm --name=%p \
+    --net=host \
+    --volumes-from=%p-data \
+    --volume=/data:/data \
+    --volume=/etc/timezone:/etc/timezone:ro \
+    --volume=/etc/localtime:/etc/localtime:ro \
     -p 32400:32400 -p 1900:1900/udp -p 3005:3005 \
     -p 5353:5353/udp -p 8324:8324 -p 32410:32410/udp \
     -p 32411:32411/udp -p 32412:32412/udp \
     -p 32413:32413/udp -p 32414:32414/udp \
     -p 32469:32469 -p 33400:33400 \
     --cap-add=NET_ADMIN \
-    --dns 8.8.8.8 --dns 8.8.4.4 \
-    --hostname %p \
-    --label traefik.port=32400 \
-    --label traefik.frontend.rule=$TRAEFIK_RULE \
-    --env-file /etc/sysconfig/%p/env \
-    albertdixon/plex:latest"
+    --dns=8.8.8.8 --dns=8.8.4.4 \
+    --hostname=%p \
+    --label=traefik.enable=false \
+    --env-file=/etc/sysconfig/%p/env \
+    quay.io/albertdixon/plex:${IMAGE_TAG}
 ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
