--- a/systemd/sickrage.service
+++ b/systemd/sickrage.service
@@ -23,7 +23,7 @@ ExecStart=/usr/bin/docker run --rm --name=%p \
     --volume=/etc/localtime:/etc/localtime:ro \
     --expose=8081 \
     --label=traefik.port=8081 \
-    --label=traefik.frontend.rule=$TRAEFIK_RULE \
+    --label=traefik.frontend.rule=${TRAEFIK_RULE} \
     --label=traefik.frontend.entryPoints=http,https \
     --env=REPO=${REPO} \
     --env-file /etc/sysconfig/%p/env \
