--- a/systemd/couchpotato-transmission.service
+++ b/systemd/couchpotato-transmission.service
@@ -1,36 +1,31 @@
 [Unit]
-Description=torrent client for couchpotato with vpn
+Description=Torrent client for couchpotato with vpn
 Documentation=https://github.com/albertrdixon/docker-transmission
-Wants=docker.service couchpotato-transmission-data.service movie-downloads.service network-online.target
-Requires=docker.service couchpotato-transmission-data.service movie-downloads.service network-online.target
-After=docker.service couchpotato-transmission-data.service movie-downloads.service network-online.target
+Requires=docker.socket tv-downloads.service
+After=docker.socket tv-downloads.service
 
 [Service]
-TimeoutStartSec=20m
 Restart=always
-StandardOutput=journal
-StandardError=inherit
-SyslogIdentifier=%p
+Environment=IMAGE_TAG=latest
 Environment=TRAEFIK_RULE=Host:%p
 EnvironmentFile=-/etc/sysconfig/%p/run
+ExecStartPre=/bin/mkdir -pv /opt/transmission/couchpotato
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStartPre=/bin/bash -c "/usr/bin/docker pull quay.io/albertrdixon/transmission:latest"
-ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p \
-    --volumes-from movie-downloads \
-    --volumes-from couchpotato-transmission-data \
-    --volume /etc/timezone:/etc/timezone:ro \
-    --volume /etc/localtime:/etc/localtime:ro \
-    --dns 209.222.18.222 --dns 209.222.18.218 \
-    --cap-add MKNOD --cap-add NET_ADMIN \
-    --expose 9091 --hostname %p \
-    --label traefik.frontend.rule=$TRAEFIK_RULE \
-    --label traefik.port=9091 \
-    --env-file /etc/sysconfig/%p/env \
-    quay.io/albertrdixon/transmission:latest"
-ExecStop=/bin/bash -c "/usr/bin/docker stop %p"
-ExecReload=/bin/bash -c "/usr/bin/docker restart %p"
+ExecStartPre=/usr/bin/docker pull quay.io/albertrdixon/transmission:${IMAGE_TAG}
+ExecStart=/usr/bin/docker run --rm --name=%p \
+    --volume=movie-downloads:/downloads/movies \
+    --volume=/opt/transmission/couchpotato:/transmission \
+    --volume=/etc/timezone:/etc/timezone:ro \
+    --volume=/etc/localtime:/etc/localtime:ro \
+    --dns=209.222.18.222 --dns=209.222.18.218 \
+    --cap-add=MKNOD --cap-add=NET_ADMIN \
+    --expose=9091 --hostname=%p \
+    --label=traefik.port=9091 \
+    --label=traefik.frontend.rule=$TRAEFIK_RULE \
+    --env-file=/etc/sysconfig/%p/env \
+    quay.io/albertrdixon/transmission:${IMAGE_TAG}
+ExecStop=/usr/bin/docker stop %p
 
 [Install]
 WantedBy=multi-user.target
