--- a/systemd/tv-downloads.service
+++ b/systemd/tv-downloads.service
@@ -1,24 +1,14 @@
 [Unit]
-Description=data volume for tv downloads
-Wants=docker.service network-online.target
-After=docker.service network-online.target
-Requires=docker.service network-online.target
+Description=Data volume for tv downloads
+Requires=docker.socket
+After=docker.socket
 
 [Service]
 Type=oneshot
-TimeoutStartSec=20m
-StandardOutput=journal
-StandardError=inherit
-SyslogIdentifier=%p
-ExecStart=/bin/bash -c \
-  "/usr/bin/docker port %p || \
-  /usr/bin/docker create --name %p \
-    --entrypoint /bin/echo \
-    --volume /downloads/tv_shows \
-    busybox:latest 'TV show downloads'"
-SuccessExitStatus=0 1 2
-Restart=no
 RemainAfterExit=yes
+Environment=DRIVER=local
+EnvironmentFile=-/etc/sysconfig/volumes/tv.env
+ExecStart=/usr/bin/docker volume create tv-downloads --driver=${DRIVER} ${OPTS}
 
 [Install]
 WantedBy=multi-user.target
