--- a/systemd/plex.service
+++ b/systemd/plex.service
@@ -30,7 +30,7 @@ ExecStart=/usr/bin/docker run --rm --name=%p \
     --hostname=%p \
     --label=traefik.enable=false \
     --env-file=/etc/sysconfig/%p/env \
-    quay.io/albertdixon/plex:${IMAGE_TAG}
+    quay.io/albertrdixon/plex:${IMAGE_TAG}
 ExecStop=/usr/bin/docker stop %p
 ExecReload=/usr/bin/docker restart %p
 
