--- a/systemd/radarr.service
+++ b/systemd/radarr.service
@@ -13,6 +13,7 @@ EnvironmentFile=-/etc/sysconfig/%p/run
 ExecStartPre=/bin/mkdir -pv /opt/%p
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
+ExecStartPre=-/usr/bin/docker pull linuxserver/radarr:${IMAGE_TAG}
 ExecStart=/usr/bin/docker run --rm --name=%p \
   --hostname=%p \
   --volume=/opt/%p:/config \
