--- a/systemd/plexpy.service
+++ b/systemd/plexpy.service
@@ -1,33 +1,32 @@
 [Unit]
-Description=plexpy
+Description=Plex Information Server
 Documentation=https://github.com/drzoidberg33/plexpy
-Wants=docker.service network-online.target
-Requires=docker.service plexpy-data.service plex-data.service network-online.target
-After=docker.service plexpy-data.service plex-data.service network-online.target
+Requires=docker.socket
+Wants=docker-proxy.service
+After=docker.socket docker-proxy.service
 
 [Service]
-TimeoutStartSec=20m
-Restart=always
-StandardOutput=journal
-StandardError=inherit
-SyslogIdentifier=%p
+RestartSec=5
 Environment=TRAEFIK_RULE=Host:%p
+Environment=IMAGE_TAG=latest
 EnvironmentFile=-/etc/sysconfig/%p/run
+ExecStartPre=/bin/mkdir -pv /opt/%p
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
-ExecStart=/bin/bash -c \
-  "/usr/bin/docker run --rm --name %p \
-    --volumes-from plexpy-data \
-    --volumes-from plex-data \
-    --volume /etc/timezone:/etc/timezone:ro \
-    --volume /etc/localtime:/etc/localtime:ro \
-    --expose 8181 \
-    --hostname %p \
-    --label traefik.port=8181 \
-    --label traefik.frontend.rule=$TRAEFIK_RULE \
-    quay.io/albertrdixon/plexpy:latest"
+ExecStartPre=-/usr/bin/docker pull quay.io/albertrdixon/plexpy:${IMAGE_TAG}
+ExecStart=/usr/bin/docker run --rm --name=%p \
+  --hostname=%p \
+  --volume=/opt/plexmediaserver:/plexmediaserver \
+  --volume=/opt/%p:/data \
+  --volume=/etc/timezone:/etc/timezone:ro \
+  --volume=/etc/localtime:/etc/localtime:ro \
+  --expose=8181 \
+  --env-file=/etc/sysconfig/%p/env \
+  --label=traefik.port=8181 \
+  --label=traefik.frontend.rule=$TRAEFIK_RULE \
+  quay.io/albertrdixon/plexpy:${IMAGE_TAG}
 ExecStop=/usr/bin/docker stop %p
-ExecReload=/usr/bin/docker restart %p
+ExecReload=/usr/bin/docker kill --signal=HUP %p
 
 [Install]
 WantedBy=multi-user.target
