--- a/systemd/sonarr.service
+++ b/systemd/sonarr.service
@@ -13,7 +13,7 @@ Environment=TRAEFIK_RULE=Host:%p
 Environment=SONARR_TAG=latest
 EnvironmentFile=-/etc/sysconfig/%p/run
 ExecStartPre=/bin/mkdir -pv /opt/%p /opt/media
-ExecStartPre=/bin/chown 777 /opt/media
+ExecStartPre=/bin/chmod 777 /opt/media
 ExecStartPre=-/usr/bin/docker kill %p
 ExecStartPre=-/usr/bin/docker rm -f %p
 ExecStart=/usr/bin/docker run --rm --name=%p \
