--- a/systemd/sickrage-transmission.service
+++ b/systemd/sickrage-transmission.service
@@ -19,7 +19,7 @@ ExecStart=/usr/bin/docker run --rm --name=%p \
     --volume=/etc/timezone:/etc/timezone:ro \
     --volume=/etc/localtime:/etc/localtime:ro \
     --net=container:vpn-client \
-    --expose=9091 --hostname=%p \
+    --expose=9091 \
     --label=traefik.port=9091 \
     --label=traefik.frontend.rule=${TRAEFIK_RULE} \
     --env-file=/etc/sysconfig/%p/env \
